--- a/src/Searchbox/Searchbox.css
+++ b/src/Searchbox/Searchbox.css
@@ -6,10 +6,10 @@
 }
 
 input#searchTerm {
-    font-size: 24px;
-    padding: 10px;
-    font-weight: 600;
+    font-size: 2.5rem;
+    padding: 1rem;
+    font-weight: 400;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     border: none;
 }
