--- a/src/components/LovedPages/AddLovedPage/AddLovedPage.css
+++ b/src/components/LovedPages/AddLovedPage/AddLovedPage.css
@@ -3,10 +3,16 @@
 }
 
 .AddLovedPage button {
+    float: right;
     height: 3rem;
     font-weight: 400;
     border: 0;
     background-color: #fff;
     color: #000;
     padding: 0.75rem;
+}
+
+button:disabled, button[disabled] {
+  background-color: #cccccc;
+  color: #666666;
 }
