--- a/src/components/LovedPages/LovedPages.css
+++ b/src/components/LovedPages/LovedPages.css
@@ -3,15 +3,25 @@
     margin: 0 auto;
 }
 
-.top {
+.LovedPages .top {
     width: 100%;
     clear: both;
     padding-top: 3rem;
 }
 
-h4 {
+.LovedPages h4 {
     font-weight: 300;
     color: #fff;
     font-size: 2.5rem;
     display: inline-block;
+}
+
+.LovedPages button {
+    float: right;
+    height: 3rem;
+    font-weight: 400;
+    border: 0;
+    background-color: #fff;
+    color: #000;
+    padding: 0.75rem;
 }
