--- a/src/components/LovedPages/LovedPagesList/LovedPage/LovedPage.css
+++ b/src/components/LovedPages/LovedPagesList/LovedPage/LovedPage.css
@@ -1,12 +1,34 @@
 .LovedPage {
     padding-top: 3rem;
     display: inline-block;
+    width: 100%;
 }
 
-a {
+.LovedPage a {
     color: #fff;
 }
 
-a:hover {
+.LovedPage a:hover {
     color: #000;
+}
+
+.LovedPage .page {
+    float: left;
+}
+
+.LovedPage .actions {
+    float: right;
+}
+
+.LovedPage .actions button {
+    background-color: transparent;
+    color: #fff;
+    opacity: 0.6;
+    font-size: 2rem;
+    transition: 0.4s;
+}
+
+.LovedPage .actions button:hover {
+    opacity: 1;
+    cursor: pointer;
 }
